--- a/components/_form.scss
+++ b/components/_form.scss
@@ -1,25 +1,29 @@
 .form {
     width: 55%;
+    padding-top: 2.5rem;
+    padding-left: 3rem;
     
     &__input-group {
         position: relative;
+        margin-bottom: 2rem;
     }
 
     &__input {
-        width: 70%;
+        width: 75%;
         display: block;
         outline: none;
-        padding: 1.4rem 4rem .8rem;
+        padding: 1.4rem 4rem 1.2rem;
         border: none;
         border-bottom: 3px solid transparent;
-        border-radius: 3px;
-        color: $color-gray-dark-3;
-        background-color: $color-gray-light-1;
+        border-radius: 5px;
+        color: $color-gray-dark-1;
+        background-color: rgba($color-gray-light-1, .4);
         box-shadow: 0 2rem 4rem rgba($color-black, .3);
-        font-size: $default-font-size;
+        font-size: $default-font-size * 1.3;
         
         &::placeholder {
-            font-size: $default-font-size;
+            font-size: $default-font-size * 1.3;
+    
           
         }
 
@@ -34,7 +38,7 @@
     &__label {
         display: block;
         margin-left: 4rem;
-        color: $color-black;
+        color: $color-gray-dark-1;
         opacity: 1;
         visibility: visible;
         transform: translateY(0);
@@ -45,6 +49,51 @@
         opacity: 0;
         visibility: hidden;
         transform: translateY(-3rem);
+    }
+
+    &__radio-group {
+        margin-bottom: 4rem;
+    }
+
+    &__radio-input {
+        opacity: 0;
+        visibility: 0;
+        width: 0;
+
+    }
+
+    &__radio-label {
+        display: inline-block;
+
+    }
+
+    &__radio-button {
+        display: inline-block;
+        position: relative;
+        width: 3rem;
+        height: 3rem;
+        border-radius: 4rem;
+        margin-right: .5rem;
+        transform: translateY(.8rem);
+        border: .5rem solid $color-primary-dark;
+
+        &::after {
+            content: "";
+            display: block;
+            width: 1.5rem;
+            height: 1.5rem;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: transparent;
+            border-radius: 4rem;
+        }
+
+    }
+
+    &__radio-input:checked + &__radio-label &__radio-button::after{
+        background-color: $color-primary-dark;
     }
 
 
