--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -31,13 +31,14 @@
 }
 
 .section-form {
-    background-color: $color-primary-dark;
-    padding: 6rem 15rem;
+    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+    padding: 10rem 15rem;
 
     &__container {
         padding: 3rem;
-        height: 40rem;
-        background-image: linear-gradient(110deg, rgba($color-white, .8) 0%, rgba($color-white, .8) 50%, transparent 50%), url("../img/nat-10.jpg");
+        height: 55rem;
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .8) 50%, transparent 50%), url("../img/nat-10.jpg");
+        background-size: cover;
     }
 }
 
