--- a/components/_form.scss
+++ b/components/_form.scss
@@ -5,14 +5,13 @@
     
     &__input-group {
         position: relative;
-        margin-bottom: 2rem;
     }
 
     &__input {
         width: 75%;
         display: block;
         outline: none;
-        padding: 1.4rem 4rem 1.2rem;
+        padding: 1.4rem 4rem 1rem;
         border: none;
         border-bottom: 3px solid transparent;
         border-radius: 5px;
@@ -23,8 +22,7 @@
         
         &::placeholder {
             font-size: $default-font-size * 1.3;
-    
-          
+
         }
 
         &:focus {
@@ -37,12 +35,14 @@
 
     &__label {
         display: block;
+
         margin-left: 4rem;
         color: $color-gray-dark-1;
         opacity: 1;
         visibility: visible;
         transform: translateY(0);
         transition: all .4s;
+        font-size: $default-font-size * 1.3;
     }
 
     &__input:placeholder-shown + &__label {
@@ -52,7 +52,7 @@
     }
 
     &__radio-group {
-        margin-bottom: 4rem;
+        margin-bottom: 6rem;
     }
 
     &__radio-input {
@@ -64,6 +64,9 @@
 
     &__radio-label {
         display: inline-block;
+        font-size: $default-font-size * 1.2;
+        margin-right: 4rem;
+        
 
     }
 
