--- a/base/_utilities.scss
+++ b/base/_utilities.scss
@@ -12,8 +12,20 @@
   margin-bottom: 8rem;
 }
 
+.u-margin-top-small {
+  margin-top: 4rem;
+}
+
+.u-margin-top-medium {
+  margin-top: 6rem;
+}
+
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
 .u-margin-top-huge {
-  margin-bottom: 10rem;
+  margin-top: 10rem;
 }
 
 .u-text-uppercase {
