--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -19,7 +19,7 @@
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   border: none;
   color: #777;
@@ -50,7 +50,7 @@
   opacity: 0;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: white;
 }
 
@@ -60,27 +60,27 @@
 }
 
 .btn-text {
-    transition: all .2s;
-    &:link, &:visited {
-        font-size: $default-font-size;
-        display: inline-block;
-        color: $color-primary-dark;
-        text-decoration: none;
-        border-bottom: 2px solid $color-primary-dark;
-        padding: 2px 5px;
-        border-radius: 2px;
+  transition: all 0.2s;
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    display: inline-block;
+    color: $color-primary-dark;
+    text-decoration: none;
+    border-bottom: 2px solid $color-primary-dark;
+    padding: 2px 5px;
+    border-radius: 2px;
+  }
 
-    }
+  &:hover {
+    color: $color-white;
+    background-color: $color-primary-dark;
+    transform: translateY(-2px);
+    box-shadow: 0 1px 2px rgba($color-black, $alpha: 0.25);
+  }
 
-    &:hover {
-        color: $color-white;
-        background-color: $color-primary-dark;
-        transform: translateY(-2px);
-        box-shadow: 0 1px 2px rgba($color-black, $alpha: .25);
-    }
-
-    &:active {
-        transform: translateY(-1px);
-        box-shadow: 0 1px 2px rgba($color-black, $alpha: .25);
-    }
+  &:active {
+    transform: translateY(-1px);
+    box-shadow: 0 1px 2px rgba($color-black, $alpha: 0.25);
+  }
 }
