--- a/components/_card.scss
+++ b/components/_card.scss
@@ -13,16 +13,27 @@
         width: 100%;
         transition: all 2s;
         backface-visibility: hidden;
-        border-radius: 3px;
+        border-radius: 1rem;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+        overflow: hidden;
 
         &--front {
             background-color: $color-white;
         }
         &--back {
-            background-image: linear-gradient(to bottom right, $color-primary-light, $color-primary-dark);
             transform: rotateY(180deg);
+
+            &-1 {
+                background-image: linear-gradient(to bottom right, $color-secondary-light, $color-secondary-dark);            
+            }
+            &-2 {
+                background-image: linear-gradient(to bottom right, $color-primary-light, $color-primary-dark);            
+            }
+            &-3 {
+                background-image: linear-gradient(to bottom right, $color-tertiary-light, $color-tertiary-dark);            
+            }
         }
+        
     }
 
     &:hover &__side--front {
@@ -33,6 +44,7 @@
     }
 
     &__picture {
+        position: relative;
         height: 23rem;
         background-size: cover;
         background-blend-mode: screen;
@@ -40,9 +52,94 @@
         
         &--1 {
             background-image: 
-            linear-gradient(to bottom right, $color-primary-light, $color-primary-dark), 
+            linear-gradient(to bottom right,  $color-secondary-light, $color-secondary-dark), 
             url('../img/nat-5.jpg');
 
         }
+        &--2 {
+            background-image: 
+            linear-gradient(to bottom right,  $color-primary-light, $color-primary-dark), 
+            url('../img/nat-6.jpg');
+
+        }
+        &--3 {
+            background-image: 
+            linear-gradient(to bottom right,  $color-tertiary-light, $color-tertiary-dark), 
+            url('../img/nat-7.jpg');
+
+        }
     }
+
+    &__header {
+        width: 70%;
+        text-align: right;
+        position: absolute;
+        top: 15rem;
+        right: 2rem;
+        line-height: normal;
+
+    }
+
+    &__title {
+        padding: .5rem 2rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+        text-transform: uppercase;
+        color: $color-white;
+        font-size: 3rem;
+
+        &--1 {
+            background-color: rgba($color-secondary-dark, .8);
+        }
+        &--2 {
+            background-color: rgba($color-primary-dark, .8);
+        }
+        &--3 {
+            background-color: rgba($color-tertiary-dark, .8);
+        }
+      
+    }
+
+    &__front-text {
+        // text-transform: uppercase;
+    }
+
+    &__list {
+        padding: 2rem 7rem;
+        text-align: center;
+        list-style: none;
+    }
+
+    &__item {
+        padding: .8rem;
+        &:not(:last-child) {
+            border-bottom: 1px solid $color-gray-light-2;
+            ;
+        }
+
+    }
+
+    &__back-box {
+        color: $color-white;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+    }
+
+    &__only {
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+
+    &__price {
+        font-weight: 100;
+        font-size: 10rem;
+        text-align: center;
+        margin-bottom: 3rem;
+    }
+
 }
