--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 }
 
 .heading-secoundary {
+  font-size: 3rem;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2px;
@@ -71,8 +72,20 @@ body {
   margin-bottom: 8rem;
 }
 
+.u-margin-top-small {
+  margin-top: 4rem;
+}
+
+.u-margin-top-medium {
+  margin-top: 6rem;
+}
+
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
 .u-margin-top-huge {
-  margin-bottom: 10rem;
+  margin-top: 10rem;
 }
 
 .u-text-uppercase {
@@ -100,7 +113,7 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   border: none;
   color: #777;
@@ -131,7 +144,7 @@ body {
   opacity: 0;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: white;
 }
 
@@ -210,15 +223,24 @@ body {
   width: 100%;
   transition: all 2s;
   backface-visibility: hidden;
-  border-radius: 3px;
+  border-radius: 1rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  overflow: hidden;
 }
 .card__side--front {
   background-color: #fff;
 }
 .card__side--back {
-  background-image: linear-gradient(to bottom right, #7ed56f, #28b485);
   transform: rotateY(180deg);
+}
+.card__side--back-1 {
+  background-image: linear-gradient(to bottom right, #ffb900, #ffb900);
+}
+.card__side--back-2 {
+  background-image: linear-gradient(to bottom right, #7ed56f, #28b485);
+}
+.card__side--back-3 {
+  background-image: linear-gradient(to bottom right, #2998ff, #5643fa);
 }
 .card:hover .card__side--front {
   transform: rotateY(-180deg);
@@ -227,13 +249,75 @@ body {
   transform: rotateY(0);
 }
 .card__picture {
+  position: relative;
   height: 23rem;
   background-size: cover;
   background-blend-mode: screen;
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
 .card__picture--1 {
-  background-image: linear-gradient(to bottom right, #7ed56f, #28b485), url("../img/nat-5.jpg");
+  background-image: linear-gradient(to bottom right, #ffb900, #ffb900), url("../img/nat-5.jpg");
+}
+.card__picture--2 {
+  background-image: linear-gradient(to bottom right, #7ed56f, #28b485), url("../img/nat-6.jpg");
+}
+.card__picture--3 {
+  background-image: linear-gradient(to bottom right, #2998ff, #5643fa), url("../img/nat-7.jpg");
+}
+.card__header {
+  width: 70%;
+  text-align: right;
+  position: absolute;
+  top: 15rem;
+  right: 2rem;
+  line-height: normal;
+}
+.card__title {
+  padding: 0.5rem 2rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 3rem;
+}
+.card__title--1 {
+  background-color: rgba(255, 185, 0, 0.8);
+}
+.card__title--2 {
+  background-color: rgba(40, 180, 133, 0.8);
+}
+.card__title--3 {
+  background-color: rgba(86, 67, 250, 0.8);
+}
+.card__list {
+  padding: 2rem 7rem;
+  text-align: center;
+  list-style: none;
+}
+.card__item {
+  padding: 0.8rem;
+}
+.card__item:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.card__back-box {
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card__only {
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.card__price {
+  font-weight: 100;
+  font-size: 10rem;
+  text-align: center;
+  margin-bottom: 3rem;
 }
 
 .footer {
@@ -315,7 +399,7 @@ body {
   top: 0;
   left: 0;
   padding: 4rem 3rem;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .popup:target {
   opacity: 1;
@@ -579,7 +663,7 @@ body {
   z-index: 2000;
   top: 7rem;
   right: 7rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 .navigation__icon {
   display: block;
@@ -709,7 +793,7 @@ body {
 
 .tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 20rem 0 10rem 0;
   margin-top: -10rem;
 }
 
